--- a/regis/webapp/templates/navbar.html
+++ b/regis/webapp/templates/navbar.html
@@ -13,7 +13,7 @@
          
 
           <li class="nav-item">
-            <a class="nav-link" href="{% url "logout_user" %}">Logout</a>
+            <a class="nav-link" href="{% url "logout" %}">Logout</a>
           </li> 
             {% else %}
 
