--- a/regis/webapp/templates/register.html
+++ b/regis/webapp/templates/register.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="col-md-6 offset-md-3">
 <h1>REGISTRER</h1>
+<br>
+<form method = "POST" action="{%url 'home'%}">
+    {% csrf_token %}
+    {{form.as_p}}
+        <button type="submit" class="btn btn-secondary">REGISTER</button>
+    
+</form>
+</div>
 {%endblock%}
