--- a/regis/webapp/templates/navbar.html
+++ b/regis/webapp/templates/navbar.html
@@ -18,7 +18,7 @@
             {% else %}
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url "register" %}">Register</a>
+                <a class="nav-link" href="{% url "register_user" %}">Register</a>
               </li> 
 
             <li class="nav-item">
