--- a/regis/webapp/templates/navbar.html
+++ b/regis/webapp/templates/navbar.html
@@ -10,6 +10,10 @@
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
          {% if user.is_authenticated %}
 
+
+         <li class="nav-item">
+          <a class="nav-link" href="{% url "add_record" %}">Add Record</a>
+        </li> 
          
 
           <li class="nav-item">
