Finally did it.Tried to add weasy print but wont work.It will work anyway just not now

--- a/regis/webapp/templates/home.html
+++ b/regis/webapp/templates/home.html
@@ -13,14 +13,14 @@
 <table class="table table-striped table-hover table-bordered">
   <thead class="table-dark">
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Phone</th>
-      <th scope="col">ADDRESS</th>
-      <th scope="col">TOWN</th>
-      <th scope="col">COUNTY</th>
-      <th scope="col">Created At</th>
-      <th scope="col">ID</th>
+      <th scope="col">Name 😊</th>
+      <th scope="col">Email 📧</th>
+      <th scope="col">Phone 📞</th>
+      <th scope="col">ADDRESS 🏠</th>
+      <th scope="col">TOWN 🏙️</th>
+      <th scope="col">COUNTY 🏞️</th>
+      <th scope="col">Created At 🕒</th>
+      <th scope="col">ID 🆔</th>
     </tr>
   </thead>
   <tbody>
