--- a/regis/webapp/templates/record.html
+++ b/regis/webapp/templates/record.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <br>
-<a href="{% url 'home'%}" class="btn btn-secondary">Back</a>
+<a href="{% url 'home'%}" class="btn btn-secondary">Back 🔙</a>
 
 <a href="{% url 'delete_record' one_record.id %}" class="btn btn-danger">DELETE</a>
 
