--- a/regis/webapp/templates/add_record.html
+++ b/regis/webapp/templates/add_record.html
@@ -8,9 +8,9 @@
 	{% csrf_token %}
     {{form.as_p}}
     <br/>
-    <button type="submit" class="btn btn-secondary">Add Record</button>
+    <button type="submit" class="btn btn-secondary">Add Record ➕</button>
 
-    <a href="{% url 'home'%}" class="btn btn-secondary">Back</a>
+    <a href="{% url 'home'%}" class="btn btn-secondary">Back 🔙</a>
   
   </form>
 
